// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component renders button with href correctly 1`] = `
<DocumentFragment>
  <a
    class="mia-platform-btn mia-platform-btn-primary button buttonMd"
    href="https://mia-platform.eu"
    rel="noopener noreferrer"
    tabindex="0"
  >
    <div
      class="buttonText"
    >
      Button
    </div>
  </a>
</DocumentFragment>
`;

exports[`Button Component renders button with icon left correctly 1`] = `
<DocumentFragment>
  <button
    class="mia-platform-btn mia-platform-btn-primary button buttonMd"
    type="button"
  >
    <svg
      aria-label="PiCircleHalfTiltLight"
      color="white"
      fill="currentColor"
      height="16"
      role="img"
      stroke="currentColor"
      stroke-width="0"
      style="color: white;"
      viewBox="0 0 256 256"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M200.12,55.88A102,102,0,1,0,55.88,200.13,102,102,0,1,0,200.12,55.88ZM90,209.62a89.61,89.61,0,0,1-21.23-13.89L90,174.49Zm32,8.16a90,90,0,0,1-20-3.58V162.49l20-20Zm32-3.58a89.8,89.8,0,0,1-20,3.58V130.49l20-20Zm32-17.4a89.45,89.45,0,0,1-20,12.83V98.49l20-20ZM60.27,187.24a90,90,0,0,1,127-127ZM198,184.57V71.43a90,90,0,0,1,0,113.14Z"
      />
    </svg>
    <div
      class="buttonText"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button Component renders button with icon right correctly 1`] = `
<DocumentFragment>
  <button
    class="mia-platform-btn mia-platform-btn-primary button buttonMd"
    type="button"
  >
    <div
      class="buttonText"
    >
      Button
    </div>
    <svg
      aria-label="PiCircleHalfTiltLight"
      color="white"
      fill="currentColor"
      height="16"
      role="img"
      stroke="currentColor"
      stroke-width="0"
      style="color: white;"
      viewBox="0 0 256 256"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M200.12,55.88A102,102,0,1,0,55.88,200.13,102,102,0,1,0,200.12,55.88ZM90,209.62a89.61,89.61,0,0,1-21.23-13.89L90,174.49Zm32,8.16a90,90,0,0,1-20-3.58V162.49l20-20Zm32-3.58a89.8,89.8,0,0,1-20,3.58V130.49l20-20Zm32-17.4a89.45,89.45,0,0,1-20,12.83V98.49l20-20ZM60.27,187.24a90,90,0,0,1,127-127ZM198,184.57V71.43a90,90,0,0,1,0,113.14Z"
      />
    </svg>
  </button>
</DocumentFragment>
`;

exports[`Button Component renders circle button correctly 1`] = `
<DocumentFragment>
  <button
    class="mia-platform-btn mia-platform-btn-circle mia-platform-btn-primary button buttonMdIconOnly"
    type="button"
  >
    <svg
      aria-label="PiCircleHalfTiltLight"
      color="white"
      fill="currentColor"
      height="16"
      role="img"
      stroke="currentColor"
      stroke-width="0"
      style="color: white;"
      viewBox="0 0 256 256"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M200.12,55.88A102,102,0,1,0,55.88,200.13,102,102,0,1,0,200.12,55.88ZM90,209.62a89.61,89.61,0,0,1-21.23-13.89L90,174.49Zm32,8.16a90,90,0,0,1-20-3.58V162.49l20-20Zm32-3.58a89.8,89.8,0,0,1-20,3.58V130.49l20-20Zm32-17.4a89.45,89.45,0,0,1-20,12.83V98.49l20-20ZM60.27,187.24a90,90,0,0,1,127-127ZM198,184.57V71.43a90,90,0,0,1,0,113.14Z"
      />
    </svg>
  </button>
</DocumentFragment>
`;

exports[`Button Component renders danger filled button correctly 1`] = `
<DocumentFragment>
  <button
    class="mia-platform-btn mia-platform-btn-primary mia-platform-btn-dangerous button buttonMd"
    type="button"
  >
    <div
      class="buttonText"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button Component renders danger ghost button correctly 1`] = `
<DocumentFragment>
  <button
    class="mia-platform-btn mia-platform-btn-primary mia-platform-btn-background-ghost mia-platform-btn-dangerous button buttonMd buttonGhost"
    type="button"
  >
    <div
      class="buttonText"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button Component renders danger outline button correctly 1`] = `
<DocumentFragment>
  <button
    class="mia-platform-btn mia-platform-btn-primary mia-platform-btn-background-ghost mia-platform-btn-dangerous button buttonMd"
    type="button"
  >
    <div
      class="buttonText"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button Component renders disabled button correctly 1`] = `
<DocumentFragment>
  <button
    class="mia-platform-btn mia-platform-btn-primary button buttonMd"
    disabled=""
    type="button"
  >
    <div
      class="buttonText"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button Component renders large button correctly 1`] = `
<DocumentFragment>
  <button
    class="mia-platform-btn mia-platform-btn-primary mia-platform-btn-lg button buttonLg"
    type="button"
  >
    <div
      class="buttonText"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button Component renders loading button correctly 1`] = `
<DocumentFragment>
  <button
    class="mia-platform-btn mia-platform-btn-primary mia-platform-btn-loading button buttonMd"
    type="button"
  >
    <span
      class="mia-platform-btn-icon mia-platform-btn-loading-icon"
    >
      <span
        aria-label="loading"
        class="anticon anticon-loading anticon-spin"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="loading"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
          />
        </svg>
      </span>
    </span>
    <div
      class="buttonText"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button Component renders middle button correctly 1`] = `
<DocumentFragment>
  <button
    class="mia-platform-btn mia-platform-btn-primary button buttonMd"
    type="button"
  >
    <div
      class="buttonText"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button Component renders neutral ghost button correctly 1`] = `
<DocumentFragment>
  <button
    class="mia-platform-btn mia-platform-btn-default button buttonMd buttonGhost"
    type="button"
  >
    <div
      class="buttonText"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button Component renders neutral outline button correctly 1`] = `
<DocumentFragment>
  <button
    class="mia-platform-btn mia-platform-btn-default button buttonMd"
    type="button"
  >
    <div
      class="buttonText"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button Component renders primary filled button correctly 1`] = `
<DocumentFragment>
  <button
    class="mia-platform-btn mia-platform-btn-primary button buttonMd"
    type="button"
  >
    <div
      class="buttonText"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button Component renders primary filled button correctly with form ref and htmlType 1`] = `
<DocumentFragment>
  <button
    class="mia-platform-btn mia-platform-btn-primary button buttonMd"
    form="some-form"
    type="submit"
  >
    <div
      class="buttonText"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button Component renders primary ghost button correctly 1`] = `
<DocumentFragment>
  <button
    class="mia-platform-btn mia-platform-btn-primary mia-platform-btn-background-ghost button buttonMd buttonGhost"
    type="button"
  >
    <div
      class="buttonText"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button Component renders primary outline button correctly 1`] = `
<DocumentFragment>
  <button
    class="mia-platform-btn mia-platform-btn-primary mia-platform-btn-background-ghost button buttonMd"
    type="button"
  >
    <div
      class="buttonText"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button Component renders primary outline button correctly with form ref and no htmlType 1`] = `
<DocumentFragment>
  <button
    class="mia-platform-btn mia-platform-btn-primary mia-platform-btn-background-ghost button buttonMd"
    form="some-form"
    type="submit"
  >
    <div
      class="buttonText"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button Component renders primary outline button correctly with form ref and reset htmlType 1`] = `
<DocumentFragment>
  <button
    class="mia-platform-btn mia-platform-btn-primary mia-platform-btn-background-ghost button buttonMd"
    form="some-form"
    type="reset"
  >
    <div
      class="buttonText"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button Component renders small button correctly 1`] = `
<DocumentFragment>
  <button
    class="mia-platform-btn mia-platform-btn-primary mia-platform-btn-sm button buttonSm"
    type="button"
  >
    <div
      class="buttonText"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;

exports[`Button Component renders square button correctly 1`] = `
<DocumentFragment>
  <button
    class="mia-platform-btn mia-platform-btn-primary button buttonMdIconOnly"
    type="button"
  >
    <svg
      aria-label="PiCircleHalfTiltLight"
      color="white"
      fill="currentColor"
      height="16"
      role="img"
      stroke="currentColor"
      stroke-width="0"
      style="color: white;"
      viewBox="0 0 256 256"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M200.12,55.88A102,102,0,1,0,55.88,200.13,102,102,0,1,0,200.12,55.88ZM90,209.62a89.61,89.61,0,0,1-21.23-13.89L90,174.49Zm32,8.16a90,90,0,0,1-20-3.58V162.49l20-20Zm32-3.58a89.8,89.8,0,0,1-20,3.58V130.49l20-20Zm32-17.4a89.45,89.45,0,0,1-20,12.83V98.49l20-20ZM60.27,187.24a90,90,0,0,1,127-127ZM198,184.57V71.43a90,90,0,0,1,0,113.14Z"
      />
    </svg>
  </button>
</DocumentFragment>
`;

exports[`Button Component rendersblock button correctly 1`] = `
<DocumentFragment>
  <button
    class="mia-platform-btn mia-platform-btn-primary mia-platform-btn-block button buttonMd"
    type="button"
  >
    <div
      class="buttonText"
    >
      Button
    </div>
  </button>
</DocumentFragment>
`;
